code/HADAD-base/src/main/java/hadad/base/compiler/model/pj/full/PJQLParser.java
// Generated from PJQL.g4 by ANTLR 4.7.2

package hadad.base.compiler.model.pj.full;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PJQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, FROM=7, SELECT=8, WHERE=9, 
		IN=10, MAP=11, KEYS=12, LIST=13, SET=14, MAIN=15, JSONBUILDOBJECT=16, 
		JSONARRAYELEMENTS=17, AS=18, AND=19, NAME=20, STRING=21, INTEGER=22, WHITESPACE=23;
	public static final int
		RULE_pjqlQuery = 0, RULE_viewName = 1, RULE_pjQuery = 2, RULE_pjSelectClause = 3, 
		RULE_pjSelectStatement = 4, RULE_pjSelectItem = 5, RULE_pjPathSelect = 6, 
		RULE_pjRecordConstruct = 7, RULE_pjFieldBinding = 8, RULE_pjRecordConstructFieldName = 9, 
		RULE_pjFieldValue = 10, RULE_pjSelectVar = 11, RULE_pjSelectConstant = 12, 
		RULE_pjSelectQuery = 13, RULE_pjFromWhereClause = 14, RULE_pjFromClause = 15, 
		RULE_pjBinding = 16, RULE_pjFromClauseBindingSource = 17, RULE_pjSource = 18, 
		RULE_pjFromClauseBindingVar = 19, RULE_pjWhereClause = 20, RULE_pjCondition = 21, 
		RULE_pjWhereCondEquality = 22, RULE_pjWhereCondEqualityLeftTerm = 23, 
		RULE_pjWhereCondEqualityRightTerm = 24, RULE_pjCTerm = 25, RULE_pjTerm = 26, 
		RULE_pjTermVar = 27, RULE_pjTermConstant = 28, RULE_pjTermPath = 29, RULE_pjPath = 30, 
		RULE_pjPathVar = 31, RULE_pjStep = 32, RULE_pjObjStep = 33, RULE_pjPathAttr = 34, 
		RULE_pjVariable = 35, RULE_pjRelation = 36, RULE_pjKey = 37, RULE_pjConstant = 38, 
		RULE_attribute = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"pjqlQuery", "viewName", "pjQuery", "pjSelectClause", "pjSelectStatement", 
			"pjSelectItem", "pjPathSelect", "pjRecordConstruct", "pjFieldBinding", 
			"pjRecordConstructFieldName", "pjFieldValue", "pjSelectVar", "pjSelectConstant", 
			"pjSelectQuery", "pjFromWhereClause", "pjFromClause", "pjBinding", "pjFromClauseBindingSource", 
			"pjSource", "pjFromClauseBindingVar", "pjWhereClause", "pjCondition", 
			"pjWhereCondEquality", "pjWhereCondEqualityLeftTerm", "pjWhereCondEqualityRightTerm", 
			"pjCTerm", "pjTerm", "pjTermVar", "pjTermConstant", "pjTermPath", "pjPath", 
			"pjPathVar", "pjStep", "pjObjStep", "pjPathAttr", "pjVariable", "pjRelation", 
			"pjKey", "pjConstant", "attribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "','", "'('", "')'", "'->'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "FROM", "SELECT", "WHERE", 
			"IN", "MAP", "KEYS", "LIST", "SET", "MAIN", "JSONBUILDOBJECT", "JSONARRAYELEMENTS", 
			"AS", "AND", "NAME", "STRING", "INTEGER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PJQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PJQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PjqlQueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public PjQueryContext pjQuery() {
			return getRuleContext(PjQueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PJQLParser.EOF, 0); }
		public PjqlQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjqlQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjqlQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjqlQuery(this);
		}
	}

	public final PjqlQueryContext pjqlQuery() throws RecognitionException {
		PjqlQueryContext _localctx = new PjqlQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pjqlQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			viewName();
			setState(81);
			match(T__0);
			setState(82);
			pjQuery();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(PJQLParser.NAME, 0); }
		public ViewNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viewName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterViewName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitViewName(this);
		}
	}

	public final ViewNameContext viewName() throws RecognitionException {
		ViewNameContext _localctx = new ViewNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_viewName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjQueryContext extends ParserRuleContext {
		public PjFromWhereClauseContext pjFromWhereClause() {
			return getRuleContext(PjFromWhereClauseContext.class,0);
		}
		public PjSelectClauseContext pjSelectClause() {
			return getRuleContext(PjSelectClauseContext.class,0);
		}
		public PjQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjQuery(this);
		}
	}

	public final PjQueryContext pjQuery() throws RecognitionException {
		PjQueryContext _localctx = new PjQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pjQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			pjFromWhereClause();
			setState(88);
			pjSelectClause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectClauseContext extends ParserRuleContext {
		public PjSelectStatementContext pjSelectStatement() {
			return getRuleContext(PjSelectStatementContext.class,0);
		}
		public PjSelectClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectClause(this);
		}
	}

	public final PjSelectClauseContext pjSelectClause() throws RecognitionException {
		PjSelectClauseContext _localctx = new PjSelectClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pjSelectClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			pjSelectStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(PJQLParser.SELECT, 0); }
		public List<PjSelectItemContext> pjSelectItem() {
			return getRuleContexts(PjSelectItemContext.class);
		}
		public PjSelectItemContext pjSelectItem(int i) {
			return getRuleContext(PjSelectItemContext.class,i);
		}
		public PjSelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectStatement(this);
		}
	}

	public final PjSelectStatementContext pjSelectStatement() throws RecognitionException {
		PjSelectStatementContext _localctx = new PjSelectStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pjSelectStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(SELECT);
			setState(93);
			pjSelectItem();
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(94);
					match(T__1);
					setState(95);
					pjSelectItem();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectItemContext extends ParserRuleContext {
		public PjRecordConstructContext pjRecordConstruct() {
			return getRuleContext(PjRecordConstructContext.class,0);
		}
		public PjSelectVarContext pjSelectVar() {
			return getRuleContext(PjSelectVarContext.class,0);
		}
		public PjSelectConstantContext pjSelectConstant() {
			return getRuleContext(PjSelectConstantContext.class,0);
		}
		public PjPathSelectContext pjPathSelect() {
			return getRuleContext(PjPathSelectContext.class,0);
		}
		public PjSelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectItem(this);
		}
	}

	public final PjSelectItemContext pjSelectItem() throws RecognitionException {
		PjSelectItemContext _localctx = new PjSelectItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pjSelectItem);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				pjRecordConstruct();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				pjSelectVar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				pjSelectConstant();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				pjPathSelect();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjPathSelectContext extends ParserRuleContext {
		public PjPathContext pjPath() {
			return getRuleContext(PjPathContext.class,0);
		}
		public TerminalNode AS() { return getToken(PJQLParser.AS, 0); }
		public PjVariableContext pjVariable() {
			return getRuleContext(PjVariableContext.class,0);
		}
		public PjPathSelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjPathSelect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjPathSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjPathSelect(this);
		}
	}

	public final PjPathSelectContext pjPathSelect() throws RecognitionException {
		PjPathSelectContext _localctx = new PjPathSelectContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pjPathSelect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			pjPath();
			setState(108);
			match(AS);
			setState(109);
			pjVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjRecordConstructContext extends ParserRuleContext {
		public TerminalNode JSONBUILDOBJECT() { return getToken(PJQLParser.JSONBUILDOBJECT, 0); }
		public List<PjFieldBindingContext> pjFieldBinding() {
			return getRuleContexts(PjFieldBindingContext.class);
		}
		public PjFieldBindingContext pjFieldBinding(int i) {
			return getRuleContext(PjFieldBindingContext.class,i);
		}
		public PjRecordConstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjRecordConstruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjRecordConstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjRecordConstruct(this);
		}
	}

	public final PjRecordConstructContext pjRecordConstruct() throws RecognitionException {
		PjRecordConstructContext _localctx = new PjRecordConstructContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pjRecordConstruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(JSONBUILDOBJECT);
			setState(112);
			match(T__2);
			setState(113);
			pjFieldBinding();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(114);
				match(T__1);
				setState(115);
				pjFieldBinding();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjFieldBindingContext extends ParserRuleContext {
		public PjRecordConstructFieldNameContext pjRecordConstructFieldName() {
			return getRuleContext(PjRecordConstructFieldNameContext.class,0);
		}
		public PjFieldValueContext pjFieldValue() {
			return getRuleContext(PjFieldValueContext.class,0);
		}
		public PjFieldBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjFieldBinding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjFieldBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjFieldBinding(this);
		}
	}

	public final PjFieldBindingContext pjFieldBinding() throws RecognitionException {
		PjFieldBindingContext _localctx = new PjFieldBindingContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pjFieldBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			pjRecordConstructFieldName();
			setState(124);
			match(T__1);
			setState(125);
			pjFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjRecordConstructFieldNameContext extends ParserRuleContext {
		public PjKeyContext pjKey() {
			return getRuleContext(PjKeyContext.class,0);
		}
		public PjRecordConstructFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjRecordConstructFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjRecordConstructFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjRecordConstructFieldName(this);
		}
	}

	public final PjRecordConstructFieldNameContext pjRecordConstructFieldName() throws RecognitionException {
		PjRecordConstructFieldNameContext _localctx = new PjRecordConstructFieldNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pjRecordConstructFieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			pjKey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjFieldValueContext extends ParserRuleContext {
		public PjRecordConstructContext pjRecordConstruct() {
			return getRuleContext(PjRecordConstructContext.class,0);
		}
		public PjSelectVarContext pjSelectVar() {
			return getRuleContext(PjSelectVarContext.class,0);
		}
		public PjSelectConstantContext pjSelectConstant() {
			return getRuleContext(PjSelectConstantContext.class,0);
		}
		public PjSelectQueryContext pjSelectQuery() {
			return getRuleContext(PjSelectQueryContext.class,0);
		}
		public PjFieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjFieldValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjFieldValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjFieldValue(this);
		}
	}

	public final PjFieldValueContext pjFieldValue() throws RecognitionException {
		PjFieldValueContext _localctx = new PjFieldValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pjFieldValue);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JSONBUILDOBJECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				pjRecordConstruct();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				pjSelectVar();
				}
				break;
			case STRING:
			case INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				pjSelectConstant();
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				pjSelectQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectVarContext extends ParserRuleContext {
		public PjVariableContext pjVariable() {
			return getRuleContext(PjVariableContext.class,0);
		}
		public PjSelectVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectVar(this);
		}
	}

	public final PjSelectVarContext pjSelectVar() throws RecognitionException {
		PjSelectVarContext _localctx = new PjSelectVarContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pjSelectVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			pjVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectConstantContext extends ParserRuleContext {
		public PjConstantContext pjConstant() {
			return getRuleContext(PjConstantContext.class,0);
		}
		public PjSelectConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectConstant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectConstant(this);
		}
	}

	public final PjSelectConstantContext pjSelectConstant() throws RecognitionException {
		PjSelectConstantContext _localctx = new PjSelectConstantContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_pjSelectConstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			pjConstant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjSelectQueryContext extends ParserRuleContext {
		public PjQueryContext pjQuery() {
			return getRuleContext(PjQueryContext.class,0);
		}
		public PjSelectQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjSelectQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjSelectQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjSelectQuery(this);
		}
	}

	public final PjSelectQueryContext pjSelectQuery() throws RecognitionException {
		PjSelectQueryContext _localctx = new PjSelectQueryContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pjSelectQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			pjQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PjFromWhereClauseContext extends ParserRuleContext {
		public PjFromClauseContext pjFromClause() {
			return getRuleContext(PjFromClauseContext.class,0);
		}
		public PjWhereClauseContext pjWhereClause() {
			return getRuleContext(PjWhereClauseContext.class,0);
		}
		public PjFromWhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pjFromWhereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).enterPjFromWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PJQLListener ) ((PJQLListener)listener).exitPjFromWhereClause(this);
		}
	}

	public final PjFromWhereClauseContext pjFromWhereClause() throws RecognitionException {
		PjFromWhereClauseContext _localctx = new PjFromWhereClauseContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pjFromWhereClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			pjFromClause();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(142);
				pjWhereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
